# SOTA

./: .gitignore  HISTORY.md  LICENSE  Plans.md  README.md  index.html  package-lock.json  package.json  pyproject.toml  requirements.txt  tailwind.config.js
BMT/: BMT-mapping.json  BMT-miss.json
config/: benchmarks_meta.yaml  events_calendar.yaml  limits.yaml  models_alias.yaml  scouts.yaml  seed_sources.yaml
css/: tailwind.css  tokens.css
cyber/: __init__.py  __main__.py
dashboard/: data  index.html
data/: benchmarks.json  bmt_connections.json  models.json  sota.json
docs/: BMT-candidates-2026-04-18.md
js/: app.js  comparison.js  cyber-coding.js  explorer.js  filters.js  frontier-compare.js  medical-ai.js  modal.js  sovereign.js
resource/: benchmark_scores_2026_04.json  bmt_batch1_agent_breadth_scores_2026_04_18.json  bmt_batch1_audio_scores_2026_04_18.json  bmt_batch1_cti_scores_2026_04_18.json  bmt_batch1_cyber_multimodal_scores_2026_04_18.json  bmt_batch1_healthbench_scores_2026_04_18.json  bmt_batch1_helmet_scores_2026_04_18.json  bmt_batch1_reasoning_breadth_scores_2026_04_18.json  bmt_batch1_safety_scores_2026_04_18.json  bmt_batch1_swe_multilang_scores_2026_04_18.json  bmt_batch1_video_mme_scores_2026_04_18.json  china_missing_lineup_2026_04_25_scores.json  deepseek_v4_pro_2026_04_24_scores.json  france_param_lineup_2026_04_25_scores.json  frontier_2026_04_24_scores.json  gpt55_coverage_2026_04_24_scores.json  gpt55_cyber_deep_dive_2026_04_24_scores.json  gpt55_launch_2026_04_24_scores.json  gpt55_pro_2026_04_24_scores.json  (+37 more)
tests/: conftest.py  (+20 more)
(+93 files in other folders)
